// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ip-geolocation can geolocate ip address from Germany 1`] = `
Object {
  "city": Object {
    "name": Any<String>,
  },
  "continent": Object {
    "code": "EU",
    "name": "Europe",
  },
  "country": Object {
    "code": "DE",
    "isInEuropeanUnion": true,
    "name": "Germany",
  },
  "location": Object {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": Object {
    "name": "Hesse",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from South Africa 1`] = `
Object {
  "city": Object {
    "name": Any<String>,
  },
  "continent": Object {
    "code": "AF",
    "name": "Africa",
  },
  "country": Object {
    "code": "ZA",
    "isInEuropeanUnion": false,
    "name": "South Africa",
  },
  "location": Object {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": Object {
    "name": "Gauteng",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the UK 1`] = `
Object {
  "city": Object {
    "name": Any<String>,
  },
  "continent": Object {
    "code": "EU",
    "name": "Europe",
  },
  "country": Object {
    "code": "GB",
    "isInEuropeanUnion": false,
    "name": "United Kingdom",
  },
  "location": Object {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": Object {
    "name": "England",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the USA 1`] = `
Object {
  "city": Object {
    "name": Any<String>,
  },
  "continent": Object {
    "code": "NA",
    "name": "North America",
  },
  "country": Object {
    "code": "US",
    "isInEuropeanUnion": false,
    "name": "United States",
  },
  "location": Object {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": Object {
    "name": "New Jersey",
  },
}
`;

exports[`ip-geolocation errors if the database does not exist 1`] = `[Error: Database file at foo.mmdb does not exist]`;
